msg with gotten places OK

--- a/places_codes.config
+++ b/places_codes.config
@@ -1,1 +1,9 @@
 [CODES]
+cafes = 581214
+restaurants = 581208
+monuments = 599972
+museums = 841201
+libraries = 823106
+horce_racing = 794803
+entertainment= 792905
+zoos = 842201
