--- a/places_codes.config
+++ b/places_codes.config
@@ -1,9 +1,9 @@
 [CODES]
-cafes = 581214
-restaurants = 581208
-monuments = 599972
-museums = 841201
-libraries = 823106
-horce_racing = 794803
-entertainment= 792905
-zoos = 842201
+кафе = 581214
+рестораны = 581208
+памятники = 599972
+музеи = 841201
+библиотеки = 823106
+ипподромы = 794803
+парки развлечений = 792905
+зоопарки = 842201
