--- a/tokens.config.example
+++ b/tokens.config.example
@@ -1,3 +1,3 @@
-[SETTINGS]
+[TOKENS]
 telegram-token = 555555555:AAAAAAAAAAAAA-VVVVVVVVVVVVVVVVVVVVV
 mapquest-key = XXXXXXXXXXXXXXXXXXXXXTTTTTTTTTTT
